<resources>
    <string name="app_name">DCP Expeditions</string>
    <string-array name="Category">
        <item>Discover Categories</item>
        <item>Gadgets</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="headline">Why Buy When You Can Rent</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="address">Regus Platinum Business Center, 13 Platinum Techno Park, Sec. 30A, Vashi, Navi Mumbai - 400705</string>
    <string name="email">info@dcpexpeditions.com</string>
    <string name="count">Count 20</string>
    <string name="count3">Count 3</string>
    <string name="photography">Photography</string>
    <string name="description">DCP Online Masterclass - Photographing Birds In Flight, May 2020</string>
    <string name="date">30, May 2020</string>
    <string name="amount">₹ 2,500/-</string>
    <string name="book_now">Book Now</string>
    <string name="workshop_dec">DCP Online Masterclass - Advanced Photography Workshop, May 2020</string>
    <string name="date1">31, May 2020</string>
    <string name="silver_membership">Silver Membership(Validity Of 1 Year)</string>
    <string name="rupees">₹ 1,770/-</string>
    <string name="one">1.One Free Experiential Photography Workshop</string>
    <string name="two">2.Free entry to DCP Weekend Photo Walks happening in any city</string>
    <string name="three">3.Free participation in DCP Annual Photography Exhibition, Mumbai</string>
    <string name="four">4.From 3 to 5% discount on selected DCP Workshops and Expeditions within India</string>
    <string name="five">5.10% discount on DCP equipment rentals (on rent value above Rs 5000)*</string>
    <string name="six">6.20% discount for annual subscription of Sanctuary Asia</string>
    <string name="seven">7.20% discount for annual subscription of Sanctuary Cubs</string>
    <string name="eight">8.20% discount on all Sanctuary Asia publication books</string>
    <string name="nine">9.20% discount on Gold and Platinum memberships of Saevus</string>
    <string name="ten">10.20% discount for annual subscription of Saevus print magazine</string>
    <string name="eleven">11.50% discount for annual subscription of Saevus online magazine</string>
    <string name="twelve">12.Over 45% discount for annual subscription of Smart Photography</string>
    <string name="thirteen">13.Over 50% discount for 3 years subscription of Smart Photography</string>
    <string name="days">Inclusive all taxes / 365 Days</string>
    <string name="taxes">Per Head Inclusive all taxes</string>

    <string name="one1">1.Three Free Experiential Photography Workshops once in a year</string>
    <string name="rate">₹ 4,720/-</string>
    <string name="day">Inclusive all taxes / 1095 Days</string>
    <string name="membership_packages">Membership Packages</string>
    <string name="email_box">Please check your registered Email Mailbox, for verification code</string>
    <string name="verification_code">Verification Code*</string>
    <string name="verification">Verification Code</string>
    <string name="verify">Verify</string>
    <string name="you_re_almost_done">You\'re Almost Done!</string>
    <string name="membership_des">Your registration for the membership will happen only when you complete the payment process. Please proceed to make an online payment by clicking on the payment button below. We thank you for your interest in DCP workshops.</string>
    <string name="order">Order ID</string>
    <string name="cash">Amount</string>
    <string name="pincode">PinCode</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="addresses">Address</string>
    <string name="email_id">Email ID</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="full_name">Full Name</string>
    <string name="order_id">PACK20201986</string>
    <string name="rs_1_770">₹ 1,770</string>
    <string name="_411041">411041</string>
    <string name="india">India</string>
    <string name="maharastra">Maharashtra</string>
    <string name="pune">Pune</string>
    <string name="katraj">Katraj</string>
    <string name="john_gmail_com">john@gmail.com</string>
    <string name="_987456321">987456321</string>
    <string name="john_doe">John Doe</string>
    <string name="make_a_payment">Make A Payment</string>
    <string name="camera_title">CANON 100 – 400 MM F/4.5 – 5.6 IS II, EF</string>
    <string name="features">Versatile, portable super-telephoto zoom lens. Superb image quality right across the frame. Prevent camera shake with a 4-stop Image Stabilizer. Customise the feel of the zoom control for different situations. Fast, near-silent focusing. Shoot confidently in tough weather conditions.</string>
    <string name="price">₹ 4,3660/-</string>
    <string name="blank">-</string>
    <string name="info">Fill The Information</string>
    <string name="your_info">Your Info</string>
    <string name="name">FullName*</string>
    <string name="your_full_name">Your Full Name</string>
    <string name="mobileno">MobileNo.*</string>
    <string name="your_mobile_number">Your Mobile Number</string>
    <string name="emailid">EmailID*</string>
    <string name="your_email_id">Your Email Id</string>
    <string name="add">Address*</string>
    <string name="your_address">Your address</string>
    <string name="states">State*</string>
    <string name="your_state">Your State</string>
    <string name="cities">City*</string>
    <string name="your_city">Your City</string>
    <string name="pin">Pincode*</string>
    <string name="your_pincode">Your Pincode</string>
    <string name="next">Next</string>
    <string name="successful_transaction">Your transaction is successful. For your order id: 12345</string>
    <string name="information">The initiative of DCP online tutorials aims at bringing the state of the art photography learning to the comfort of your home. It is also our objective to make these tutorials available to you at an extremely affordable price.</string>
    <string name="package_cost">Workshop fee</string>
    <string name="cost">₹ 2500/- per head inclusive of all taxes</string>
    <string name="Policy">Cancellation Policy</string>
    <string name="full_refund">1.All cancellations before 30 days of the event date- 100% refund</string>
    <string name="half_refund">2.All cancellations between 20–30 days of the event date- 50% refund</string>
    <string name="no_refund">3.All cancellations within 20 days of de event date- no refund possible</string>
    <string name="registration">Please click on the "Book Now" tab on the bottom right corner of this page to regsiter yourself. Once you fill in your details and click submit, you will be redi rected to the online payment page, Your registration is completed and confirmed only after a successful payment process. In case of any difficulty, Please connect with us through any of the following - Land line: 022-61818464 Fax: 022-61214950 Mail:info@dcpexpeditions.com</string>

    <string name="arrow">|</string>
    <string name="government_announcement">Government Announcement</string>
    <string name="dipak_gmail_com">dipak@gmail.com</string>
    <string name="_8806659062">8806659062</string>
    <string name="one_image">One Image</string>
    <string name="two_image">Two Image</string>
    <string name="three_image">Three Image</string>
    <string name="camera_details">Camera Details</string>
    <string name="final_steps">Final steps</string>
    <string name="dipak_yadav">Dipak Yadav</string>
    <string name="swarget_pune">swarget,pune</string>
    <string name="maharashtra">maharashtra</string>
    <string name="_411037">411037</string>
    <string name="pick_date">Pick Date*</string>
    <string name="pick_date_of_equipments">Pick Date of Equipments</string>
    <string name="camera_owned">Camera Owned</string>
    <string name="return_date_of_equipments">Return Date of Equipments</string>
    <string name="lens_owned">Lens Owned</string>
    <string name="select_state">Select State</string>
    <string name="equipment_rent">Equipment Interested To Rent</string>
    <string name="return_time_of_equipments">Return Time of Equipments</string>
    <string name="id_proof">ID Proof*</string>
    <string name="id_proof_number">ID Proof Number*</string>
    <string name="do_you_have_membership_with_dcp">Do you have Membership with DCP?</string>
    <string name="do_you_have_promocode">Do you have Promocode?</string>
    <string name="type_your_membership_code">Type your Membership Code</string>
    <string name="type_your_promo_code">Type your Promo Code</string>
    <string name="text">Android Radio Button A radio button consists of two states – checked and unchecked. Clicking an unchecked button changes its state to “checked” state and “unchecked” for the previously selected radio button. To toggle a checked state to unchecked state, we need to chose another item. Clicking a checked state button doesn’t do any good. A RadioGroup is a set of radio buttons. Radio Buttons that have different parent ViewGroup can’t be termed as a RadioGroup.Android Radio Button A radio button consists of two states – checked and unchecked. Clicking an unchecked button changes its state to “checked” state and “unchecked” for the previously selected radio button. To toggle a checked state to unchecked state, we need to chose another item. Clicking a checked state button doesn’t do any good. A RadioGroup is a set of radio buttons. Radio Buttons that have different parent ViewGroup can’t be termed as a RadioGroup.Android Radio Button A radio button consists of two states – checked and unchecked. Clicking an unchecked button changes its state to “checked” state and “unchecked” for the previously selected radio button. To toggle a checked state to unchecked state, we need to chose another item. Clicking a checked state button doesn’t do any good. A RadioGroup is a set of radio buttons. Radio Buttons that have different parent ViewGroup can’t be termed as a RadioGroup.</string>
    <string name="submit">Submit</string>
    <string name="message">We need to understand more about the equipment you use. This helps us to guide you better. Write the name of your camera model and the lens you wish to use for this workshop in the fields below. We also have an equipment rental service. If you wish to avail this service, Please mention the equipment if you wish to rent from us</string>
    <string name="line">-</string>
    <string name="workshop_category">Workshop Category</string>
    <string name="your_shopping_cart">Your Shopping Cart</string>
    <string name="particular">Particular</string>
    <string name="Qyt">Count</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="net_total">Net Total:</string>
    <string name="_45_660">₹45,660</string>
    <string name="place_order">Place Order</string>
    <string name="paise">Price</string>
    <string name="how_much">Amount</string>
    <string name="x">X</string>
    <string name="laowa_15mm_f_4_wide_angle_macro">Laowa 15mm f/4 wide angle macro</string>
    <string name="Canon">Canon 7D</string>
    <string name="rs_43_660">₹ 43,660</string>
    <string name="rs_1000">₹ 1,000</string>
    <string name="_1">- 1 +</string>
    <string name="_2">- 2 +</string>
    <string name="rs_2_500">₹ 2,500/-</string>
    <string name="update_cart">Update Cart</string>

</resources>