<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".Membership.MembershipPackagesFragment">

    <FrameLayout
        android:id="@+id/fragment_membership"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_40">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/aller"
                    android:gravity="center"
                    android:text="@string/membership_packages"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size18" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_50"
                android:layout_marginTop="@dimen/margin_40"
                android:layout_marginEnd="@dimen/margin_50"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aller"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/margin_50"
                    android:layout_marginEnd="@dimen/margin_50"
                    android:text="@string/email_box"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size10" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/verification_code"
                    android:textColor="@color/white"
                    android:fontFamily="@font/allerlt"
                    android:textSize="@dimen/text_size10"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginStart="@dimen/margin_15"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/verification"
                    android:background="@drawable/white_border"
                    android:fontFamily="@font/aller"
                    android:layout_marginTop="@dimen/margin_10"
                    android:padding="@dimen/padding_10"
                    android:textColorHint="@color/light_white"
                    android:textSize="@dimen/text_size14"/>

                <Button
                    android:id="@+id/verify_btn"
                    android:layout_width="@dimen/margin_120"
                    android:layout_height="@dimen/margin_40"
                    android:layout_marginTop="@dimen/margin_10"
                    android:text="@string/verify"
                    android:fontFamily="@font/aller"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:background="@drawable/button_baground"/>


            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>