<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green">

    <FrameLayout
        android:id="@+id/membership_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </FrameLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rel_txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/aller"
                android:text="@string/info"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size16" />


        </RelativeLayout>

        <ImageView
            android:id="@+id/img_one"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@+id/rel_txt_title"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/one_icon">

        </ImageView>

        <TextView
            android:id="@+id/your_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_one"
            android:layout_marginTop="@dimen/margin_10"
            android:fontFamily="@font/aller"
            android:textSize="@dimen/text_size14"
            android:layout_centerHorizontal="true"
            android:text="@string/your_info"
            android:textColor="@color/white" />


        <RelativeLayout
            android:id="@+id/rel_user_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_below="@+id/your_info_text"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginBottom="@dimen/margin_15">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:id="@+id/rel_full_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_50"
                        android:layout_marginRight="@dimen/margin_50">

                        <TextView
                            android:id="@+id/txt_edit_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin_10"
                            android:fontFamily="@font/aller"
                            android:text="@string/name"
                            android:textSize="@dimen/text_size14"
                            android:textColor="@color/white" />

                        <EditText
                            android:id="@+id/edit_full_name"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_below="@id/txt_edit_title"
                            android:layout_marginTop="@dimen/margin_5"
                            android:background="@drawable/edit_baground"
                            android:fontFamily="@font/aller"
                            android:hint="@string/your_full_name"
                            android:inputType="text"
                            android:padding="@dimen/padding_10"
                            android:textColor="@color/white"
                            android:textColorHint="@color/medium_light_gray"
                            android:textSize="@dimen/text_size14" />

                    </RelativeLayout>


                    <RelativeLayout
                        android:id="@+id/rel_mobile_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rel_full_name"
                        android:layout_marginLeft="@dimen/margin_50"
                        android:layout_marginTop="@dimen/margin_10"
                        android:layout_marginRight="@dimen/margin_50">

                        <TextView
                            android:id="@+id/txt_mobile_no"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_10"
                            android:fontFamily="@font/aller"
                            android:text="@string/mobileno"
                            android:textSize="@dimen/text_size14"
                            android:textColor="@color/white" />

                        <EditText
                            android:id="@+id/edit_mobile_no"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_below="@id/txt_mobile_no"
                            android:layout_marginTop="@dimen/margin_5"
                            android:background="@drawable/edit_baground"
                            android:fontFamily="@font/aller"
                            android:hint="@string/your_mobile_number"
                            android:inputType="number"
                            android:padding="@dimen/padding_10"
                            android:textColor="@color/white"
                            android:textColorHint="@color/medium_light_gray"
                            android:textSize="@dimen/text_size14" />

                    </RelativeLayout>


                    <RelativeLayout
                        android:id="@+id/rel_email_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rel_mobile_no"
                        android:layout_marginLeft="@dimen/margin_50"
                        android:layout_marginTop="@dimen/margin_10"
                        android:layout_marginRight="@dimen/margin_50">

                        <TextView
                            android:id="@+id/txt_email_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_10"
                            android:fontFamily="@font/aller"
                            android:text="@string/emailid"
                            android:textSize="@dimen/text_size14"
                            android:textColor="@color/white" />

                        <EditText
                            android:id="@+id/edit_email_id"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_below="@id/txt_email_id"
                            android:layout_marginTop="@dimen/margin_5"
                            android:background="@drawable/edit_baground"
                            android:fontFamily="@font/aller"
                            android:hint="@string/your_email_id"
                            android:inputType="textEmailAddress"
                            android:padding="@dimen/padding_10"
                            android:textColor="@color/white"
                            android:textColorHint="@color/medium_light_gray"
                            android:textSize="@dimen/text_size14" />

                    </RelativeLayout>


                    <View
                        android:id="@+id/view1"
                        android:layout_width="match_parent"
                        android:layout_height="0.2dp"
                        android:layout_below="@+id/rel_email_id"
                        android:layout_marginTop="@dimen/margin_25"
                        android:alpha="0.2"
                        android:background="@color/Fent_light_gray">

                    </View>


                    <RelativeLayout
                        android:id="@+id/rel_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/view1"
                        android:layout_marginLeft="@dimen/margin_50"
                        android:layout_marginTop="@dimen/margin_25"
                        android:layout_marginRight="@dimen/margin_50">

                        <TextView
                            android:id="@+id/txt_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_10"
                            android:fontFamily="@font/aller"
                            android:textSize="@dimen/text_size14"
                            android:text="@string/add"
                            android:textColor="@color/white" />

                        <EditText
                            android:id="@+id/edit_address"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_below="@id/txt_address"
                            android:layout_marginTop="@dimen/margin_5"
                            android:background="@drawable/edit_baground"
                            android:fontFamily="@font/aller"
                            android:hint="@string/your_address"
                            android:inputType="text"
                            android:padding="@dimen/padding_10"
                            android:textColor="@color/white"
                            android:textColorHint="@color/medium_light_gray"
                            android:textSize="@dimen/text_size14" />

                    </RelativeLayout>


                    <RelativeLayout
                        android:id="@+id/rel_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rel_address"
                        android:layout_marginLeft="@dimen/margin_50"
                        android:layout_marginTop="@dimen/margin_10"
                        android:layout_marginRight="@dimen/margin_50">

                        <TextView
                            android:id="@+id/txt_state"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_10"
                            android:textSize="@dimen/text_size14"
                            android:fontFamily="@font/aller"
                            android:text="@string/states"
                            android:textColor="@color/white" />

                        <EditText
                            android:id="@+id/edit_state"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_below="@id/txt_state"
                            android:layout_marginTop="@dimen/margin_5"
                            android:background="@drawable/edit_baground"
                            android:fontFamily="@font/aller"
                            android:focusableInTouchMode="false"
                            android:clickable="true"
                            android:hint="@string/your_state"
                            android:inputType="text"
                            android:padding="@dimen/padding_10"
                            android:textColor="@color/white"
                            android:textColorHint="@color/medium_light_gray"
                            android:textSize="@dimen/text_size14"
                            android:focusable="true" />

                    </RelativeLayout>


                    <RelativeLayout
                        android:id="@+id/rel_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rel_state"
                        android:layout_marginLeft="@dimen/margin_50"
                        android:layout_marginTop="@dimen/margin_10"
                        android:layout_marginRight="@dimen/margin_50">

                        <TextView
                            android:id="@+id/txt_city"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_10"
                            android:fontFamily="@font/aller"
                            android:textSize="@dimen/text_size14"
                            android:text="@string/cities"
                            android:textColor="@color/white" />

                        <EditText
                            android:id="@+id/edit_city"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_below="@id/txt_city"
                            android:layout_marginTop="@dimen/margin_5"
                            android:background="@drawable/edit_baground"
                            android:fontFamily="@font/aller"
                            android:hint="@string/your_city"
                            android:inputType="text"
                            android:padding="@dimen/padding_10"
                            android:textColor="@color/white"
                            android:textColorHint="@color/medium_light_gray"
                            android:textSize="@dimen/text_size14" />

                    </RelativeLayout>


                    <RelativeLayout
                        android:id="@+id/rel_pincode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rel_city"
                        android:layout_marginLeft="@dimen/margin_50"
                        android:layout_marginTop="@dimen/margin_10"
                        android:layout_marginRight="@dimen/margin_50">

                        <TextView
                            android:id="@+id/txt_pincode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_10"
                            android:fontFamily="@font/aller"
                            android:textSize="@dimen/text_size14"
                            android:text="@string/pin"
                            android:textColor="@color/white" />

                        <EditText
                            android:id="@+id/edit_pincode"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_below="@id/txt_pincode"
                            android:layout_marginTop="@dimen/margin_5"
                            android:background="@drawable/edit_baground"
                            android:fontFamily="@font/aller"
                            android:hint="@string/your_pincode"
                            android:inputType="number"
                            android:padding="@dimen/padding_10"
                            android:textColor="@color/white"
                            android:textColorHint="@color/medium_light_gray"
                            android:textSize="@dimen/text_size14" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rel_next"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rel_pincode"
                        android:layout_marginLeft="@dimen/margin_50"
                        android:layout_marginTop="@dimen/margin_20"
                        android:layout_marginRight="@dimen/margin_50">

                        <Button
                            android:id="@+id/btn_next_one"
                            android:layout_width="120dp"
                            android:layout_height="35dp"
                            android:background="@drawable/button_baground"
                            android:fontFamily="@font/aller"
                            android:text="@string/next"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size14">

                        </Button>

                    </RelativeLayout>


                </RelativeLayout>
            </androidx.core.widget.NestedScrollView>


        </RelativeLayout>

    </RelativeLayout>





</LinearLayout>